[gd_scene load_steps=2 format=3 uid="uid://dd2tgc3wfihk"]

[ext_resource type="Script" uid="uid://dcv5xbrglilht" path="res://Day 61 - 70/Scripts/day_62.gd" id="1_iw0gl"]

[node name="Day62" type="Node2D"]
script = ExtResource("1_iw0gl")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 272.0
offset_top = 232.0
offset_right = 466.0
offset_bottom = 272.0
scale = Vector2(3, 3)
columns = 3

[node name="Level1" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 1"

[node name="Level2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 2
"

[node name="Level3" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 3"

[connection signal="pressed" from="GridContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="GridContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="GridContainer/Level3" to="." method="_on_level_3_pressed"]
