extends Node2D


func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://Day 61 - 70/day_62(level_1).tscn")


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://Day 61 - 70/day_62(level_2).tscn")



func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://Day 61 - 70/day_62(level_3).tscn")
